# PickandPlace-CV-ROS-conveyer

./: README.md
pickplace/: .setup_assistant  CMakeLists.txt  package.xml
pickplace/config/: fake_controllers.yaml  ompl_planning.yaml  ros_controllers.yaml  ur5.srdf
pickplace/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  ur5_moveit_controller_manager.launch.xml  warehouse.launch
pickplace/scripts/: camera_callibration.cpp  pickandplace.cpp  pickandplace_cc.cpp
pickplacev/: .setup_assistant  CMakeLists.txt  package.xml
pickplacev/config/: fake_controllers.yaml  ompl_planning.yaml  ros_controllers.yaml  ur5.srdf
pickplacev/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  ur5_moveit_controller_manager.launch.xml  warehouse.launch
pickplacev/scripts/: pickandplace_cc.cpp  test.cpp
robotiq/robotiq_description/urdf/: robotiq_85_gripper.transmission.xacro
robotiq/robotiq_gazebo/: CMakeLists.txt
ros_gazebo_spawn_models/spawn_urdf_sdf/: CMakeLists.txt
sliding_pickplace/: .setup_assistant  CMakeLists.txt  package.xml
sliding_pickplace/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  sensors_3d.yaml  ur5.srdf
sliding_pickplace/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  ur5_moveit_controller_manager.launch.xml  warehouse.launch
sliding_pickplace/scripts/: pickandplace.cpp  prismat.cpp  slidepickandplace.cpp
sliding_pickplace/srv/: UserRequest.srv
(+21 files in other folders)
